Added steel ingot and steel block and textures

--- a/src/main/resources/assets/simplesteel/lang/en_us.json
+++ b/src/main/resources/assets/simplesteel/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.simplesteel.steel_ingot": "Steel Ingot"
+  "item.simplesteel.steel_ingot": "Steel Ingot",
+
+  "block.simplesteel.steel_block": "Block of Steel"
 }
