--- a/src/main/resources/assets/simplesteel/lang/en_us.json
+++ b/src/main/resources/assets/simplesteel/lang/en_us.json
@@ -1,5 +1,16 @@
 {
   "item.simplesteel.steel_ingot": "Steel Ingot",
 
+  "item.simplesteel.steel_shovel": "Steel Shovel",
+  "item.simplesteel.steel_axe": "Steel Axe",
+  "item.simplesteel.steel_sword": "Steel Sword",
+  "item.simplesteel.steel_pickaxe": "Steel Pickaxe",
+  "item.simplesteel.steel_hoe": "Steel Hoe",
+
+  "item.simplesteel.steel_helmet": "Steel Helmet",
+  "item.simplesteel.steel_chestplate": "Steel Chestplate",
+  "item.simplesteel.steel_leggings": "Steel Leggings",
+  "item.simplesteel.steel_boots": "Steel Boots",
+
   "block.simplesteel.steel_block": "Block of Steel"
 }
